--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,15 +5,24 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
 
+	"container_name": "FastAPI",
+	//sets Dockerfile locations
+	"build": {
+        "dockerfile": "Dockerfile",
+        "context": ".."
+    },
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
+	
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	 "forwardPorts": [8000],
+	 "forwardPorts": [8000, 5433],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install -r requirements.txt",
-	"postStartCommand": "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
+	"postStartCommand": "CMD service postgresql start && /usr/local/bin/setup.sh && uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload",
+
 
 	// Configure tool-specific properties.
 	// "customizations": {},
