--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
+aiofiles==0.7.0
+aiosqlite==0.17.0
+annotated-types==0.7.0
+anyio==4.4.0
+certifi==2024.6.2
+charset-normalizer==2.0.12
+click==8.1.7
+colorama==0.4.6
 fastapi==0.110.0
-uvicorn==0.30.1 #development server
-jinja2==3.0.2 #Servers html files
-aiofiles==0.7.0 #used for asynchronous programming
-requests==2.26.0 #handles HTTP requests
-sqlalchemy #manages ORM and provides security from sql injection
-psycopg2 #connects to postgres
-databases
+greenlet==3.0.3
+h11==0.14.0
+idna==3.7
+iso8601==1.1.0
+Jinja2==3.0.2
+MarkupSafe==2.1.5
+peewee==3.17.5
+psycopg2==2.9.9
+pydantic==2.7.3
+pydantic_core==2.18.4
+pypika-tortoise==0.1.6
+python-multipart==0.0.9
+pytz==2024.1
+requests==2.26.0
+sniffio==1.3.1
+starlette==0.36.3
+typing_extensions==4.12.2
+urllib3==1.26.18
+uvicorn==0.30.1
