--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ idna==3.7
 iso8601==1.1.0
 Jinja2==3.0.2
 MarkupSafe==2.1.5
-peewee==3.17.5
 psycopg2==2.9.9
 pydantic==2.7.3
 pydantic_core==2.18.4
@@ -26,3 +25,7 @@ starlette==0.36.3
 typing_extensions==4.12.2
 urllib3==1.26.18
 uvicorn==0.30.1
+alembic>=1.9.1
+email-validator>=1.0.3
+bcrypt==4.0.1
+pyjwt==2.6.0
